@startuml

package com.acme.sales.model {

    class Customer <<Entity>> {
        + int: reference
        + String : fName
        + String : mName
        + String : lName

        + Address : address
    }
    note  right of Customer : Every customer is uniquely identified by a 'reference number' \nPersisted in the Sales system"

    class Address <<Value Object>>{
        + String addressLine1
        + String addressLine2
        + String city
        + String state
        + String zipcode
    }
    note bottom of Address:Persisted as part of Customer

    class EmailPhoneValidator <<Value Object>>{
        + boolean validatePhoneNumber()
        + boolean validateEmailAddress()
    }
    note bottom of EmailPhoneValidator: Not persisted, just used for validation and then disposed
}

Customer "1" *-- "1" Address  : has
Customer "uses" -- EmailPhoneValidator


title \n  Customer classes \n
footer \n Part of a course on Microservices \n Copyright @ 2021. For more info visit http://ACloudFan.com \n
@enduml